--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,7 +4,9 @@ header {
   width: 100vw;
   background-color: rgb(21, 21, 21);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 6vw;
+
 
   // Menu responsive
   #btn_menu {
@@ -33,8 +35,8 @@ header {
     justify-content: center;
     align-items: center;
     img {
-      width: 35px;
-      height: 35px;
+      width: 45px;
+      height: 45px;
     }
   }
 
@@ -49,16 +51,12 @@ header {
       width: 20px;
       height: 20px;
     }
-    .carrito {
-      width: 25px;
-      height: 25px;
-      position: relative;
-      left: 4vw;
-    }
   }
 
   // Menu
   .header__menu {
+    position: relative;
+    left: 30px;
     ul {
       list-style: none;
       display: flex;
@@ -70,7 +68,6 @@ header {
       li {
         font-size: 0.93em;
         position: relative;
-        top: 4px;
         padding: 20px 25px;
 
         &:hover ul {
@@ -105,6 +102,38 @@ header {
             }
           }
         }
+      }
+    }
+  }
+
+  .dropdown {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    .imgCarrito {
+      width: 30px;
+      height: 30px;
+    }
+    .btnsCarrito {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8%;
+    }
+    #carrito {
+      width: 400px;
+      background-color: rgb(30, 30, 30);
+      color: white;
+      position: absolute !important;
+      left: -170px !important;
+      top: 15px !important;
+      table {
+        color: white;
+        text-align: center;
+        font-size: 0.9rem;
+        border: none;
       }
     }
   }
