Le agregue un preloader

--- a/css/style.css
+++ b/css/style.css
@@ -78,23 +78,27 @@ header {
     header .dropdown .imgCarrito {
       width: 30px;
       height: 30px; }
-    header .dropdown .btnsCarrito {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 8%; }
     header .dropdown #carrito {
       width: 400px;
       background-color: #1e1e1e;
       color: white;
       position: absolute !important;
-      left: -170px !important;
+      left: 0 !important;
       top: 15px !important; }
       header .dropdown #carrito table {
         color: white;
         text-align: center;
         font-size: 0.9rem;
         border: none; }
+      header .dropdown #carrito .btnsCarrito {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 8%; }
+      header .dropdown #carrito .borrar-producto {
+        font-size: 0.95rem;
+        text-decoration: none;
+        color: red; }
 
 .main__titulo {
   width: 100vw;
@@ -560,7 +564,7 @@ footer {
   .main_cardio .grid4 {
     grid-area: p4; }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1550px) {
   .main {
     width: 90vw; }
     .main .main__productos {
@@ -857,7 +861,7 @@ footer {
           background-color: tomato;
           cursor: pointer; }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1500px) {
   .mainCompras {
     display: grid; }
     .mainCompras .mainCompras__imagenProductos {
